# wnetalign

./: .gitignore  CITATION.cff  CMakeLists.txt  README.md  pyproject.toml  reinstall.sh
.github/workflows/: build_wheels.yml  run_tests.yml
publication/nmr/: NMR_2D_original.ipynb  NMR_4D.ipynb
publication/nmr/2D/15N_HSQC_GB1_reduced/: gNhsqc_GB1_40C.csv
publication/nmr/4D/2LX7/2LX7_0.1_localmax/: 2LX7_CCNOESY_@ALI_localmax_5.csv
publication/nmr/7D/NMR_7D/: IDs.txt  test_15225.csv  test_15430.csv  test_15883.csv  test_15884.csv  test_16296.csv  test_16445.csv  test_17483.csv  test_19258.csv  test_25118.csv  train_15180.csv  train_15201.csv  train_15225.csv  train_15430.csv  train_15883.csv  train_15884.csv  train_16296.csv  train_17290.csv  train_30205.csv  train_6436.csv
publication/nmr/nmr/: load_spectra.py  metrics.py  postprocess.py
runtime/: runtime_analysis.ipynb  runtime_test.py
src/cpp/: wnetalign.cpp
src/wnetalign/: __init__.py  __main__.py  aligner.py  spectrum.py
src/wnetalign/cpp/wnetalign/: aligner.hpp  spectrum.hpp  wnetalign.cpp
tests/: test_cflows.py  test_lcms_align.py  test_multidim.py  test_theory_matching.py
tests_cpp/: test_lcms_align.cpp
tutorials/lcms/: lcms_align.py  lcms_align_tutorial.ipynb
tutorials/lcms/data/: 100820O2c1_MT-AU-0044-2010-08-1_030.csv  100825O2c1_MT-AU-0044-2010-08-15_038.csv  121004OTc2_TDM-AU-0324-EMC-1_011.csv
tutorials/nmr/: 25C_vs_30C_0.05_0.09_0.0367.csv  NMR_2D_original.ipynb  NMR_2D_simulated.ipynb  NMR_4D.ipynb  nmr_tutorial.ipynb
tutorials/nmr/15N_HSQC_GB1_reduced/: gNhsqc_GB1_25C.csv  gNhsqc_GB1_30C.csv
tutorials/nmr/2D/15N_HSQC_GB1_reduced/: gNhsqc_GB1_35C.csv  gNhsqc_GB1_45C.csv  gNhsqc_GB1_50C.csv
tutorials/nmr/4D/2LX7/2LX7_0.1/: 2LX7_CCNOESY_@ALI.csv
tutorials/nmr/7D/NMR_7D/: test_11526.csv  test_15176.csv  test_15179.csv  test_15180.csv  test_15201.csv  test_17290.csv  test_30205.csv  test_6436.csv  train_11526.csv  train_15176.csv  train_15179.csv  train_16445.csv  train_17483.csv  train_19258.csv  train_25118.csv
tutorials/nmr/7D/NMR_7D_without_nan/: 11526.csv  15176.csv  15179.csv  15180.csv  15201.csv  15225.csv  15430.csv  15883.csv  15884.csv  16296.csv  16445.csv  17290.csv  17483.csv  19258.csv  25118.csv  30205.csv  6436.csv
tutorials/nmr/nmr/: align.py  load_spectra.py  metrics.py  multiple_simulations.py  nmr_plots.py  plots_2d.py  postprocess.py  simulate.py  utils_2d.py  utils_4d.py  utils_7d.py
