[build-system]
#requires = ["scikit-build-core"]
#build-backend = "scikit_build_core.build"
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "wnetalign"
version = "0.0.1"
description = "Python implementation of spectral alignment using Wasserstein metric"
authors = [
    { name="Michał Startek", email="michal.startek@mimuw.edu.pl" }
]
dependencies = ["pylmcf", "wnet", "numpy"]
