[build-system]
#requires = ["scikit-build-core"]
#build-backend = "scikit_build_core.build"
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "wnetalign"
version = "0.9.0"
description = "Python implementation of spectral alignment using Wasserstein metric"
authors = [
    { name="Michał Startek", email="michal.startek@mimuw.edu.pl" }
]
dependencies = ["pylmcf", "wnet", "numpy"]
authors = [{ name="Michał Startek", email="michal.startek@mimuw.edu.pl" }]
maintainers = [{ name="Michał Startek", email="michal.startek@mimuw.edu.pl" }]
readme = "README.md"
license = "LICENCE"
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Development Status :: 4 - Beta",
]

[project.urls]
"Homepage" = "https://github.com/michalsta/wnetalign"
"Repository" = "https://github.com/michalsta/wnetalign.git"
